--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <img src="img/Shanghai.jpg" alt="资溪四季花园国际酒店">
             <div class="carousel-caption">
               <h1> 资溪一个风景如画的城市</h1>
-              <p>资溪四季花园国际酒店是目前资溪地区规模大、档次高、服务项目全的龙头酒店</p>
+              <p>资溪四季花园国际酒店是目前资溪县规模大、档次高、服务项目全的龙头酒店</p>
             </div>
           </div>
           <div class="item">
