--- a/contactus.html
+++ b/contactus.html
@@ -22,8 +22,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- Favicons网站图标 -->
-    <link rel="shortcut icon" href="img/favicon.ico"/>
-    <link rel="bookmark" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="img/logo.png"/>
+    <link rel="bookmark" href="img/logo.png" type="image/x-icon"/>
   </head>
   <body>
     <!-- 移动端导航 -->
@@ -103,12 +103,12 @@
         </div>
         <div class="box-right-mid clearfix prbox">
           <div class="primgboxs">
-            <div class="add"><img src="./img/hujiao.png" alt=""></div>
+            <div class="add"><img src="./img/hujiao.png" alt="资溪四季花园国际酒店"""></div>
             <span>酒店客房总机</span>
             <p>0794-56333888</p>
           </div>
           <div class="primgboxs">
-            <div class="add"><img src="./img/hujiao.png" alt=""></div>
+            <div class="add"><img src="./img/hujiao.png" alt="资溪四季花园国际酒店"""></div>
             <span>客房预订电话</span>
             <p>0794-5633889</p>
           </div>
@@ -146,8 +146,8 @@
                  </div>
                </div>
                <div class="footer-right">
-                 <div class="imgbox"><img src="./img/0794-56333888.png" alt=""></div>
-                 <div class="imgbox"><img src="./img/0794-5633889.png" alt=""></div>
+                 <div class="imgbox"><img src="./img/0794-56333888.png" alt="资溪四季花园国际酒店"""></div>
+                 <div class="imgbox"><img src="./img/0794-5633889.png" alt="资溪四季花园国际酒店"""></div>
                <!-- <div class="footer-laber">
                  <ul> 
                    <li><a href="aboutus.html">关于我们</a></li>
