--- a/culture.html
+++ b/culture.html
@@ -22,8 +22,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- Favicons网站图标 -->
-    <link rel="shortcut icon" href="img/favicon.ico"/>
-    <link rel="bookmark" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="img/logo.png"/>
+    <link rel="bookmark" href="img/logo.png" type="image/x-icon"/>
   </head>
   <body>
     <!-- 移动端导航 -->
@@ -113,7 +113,7 @@
                 餐饮包厢7间，拥有资溪最豪华的婚宴广场1个，户外婚庆场地1个。可同时容纳600余人就餐，星梦情缘大厅超大投影梦幻与浪漫交融，让您尽情舞动优美的华尔兹。
               </p>
             </div>
-            <img src="./img/hotel.jpg" alt="" class="infoboxs-2">
+            <img src="./img/hotel.jpg" alt="资溪四季花园国际酒店""" class="infoboxs-2">
           </div>
         </div>
       </div>
@@ -147,8 +147,8 @@
                  </div>
                </div>
                <div class="footer-right">
-                 <div class="imgbox"><img src="./img/0794-56333888.png" alt=""></div>
-                 <div class="imgbox"><img src="./img/0794-5633889.png" alt=""></div>
+                 <div class="imgbox"><img src="./img/0794-56333888.png" alt="资溪四季花园国际酒店"""></div>
+                 <div class="imgbox"><img src="./img/0794-5633889.png" alt="资溪四季花园国际酒店"""></div>
                <!-- <div class="footer-laber">
                  <ul> 
                    <li><a href="aboutus.html">关于我们</a></li>
