--- a/detail5.html
+++ b/detail5.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="资溪四季国际酒店" />
-    <meta name="keywords" content="资溪四季国际酒店" />
+    <meta name="description" content="资溪四季花园国际酒店" />
+    <meta name="keywords" content="资溪四季花园国际酒店" />
     <meta name="author" content="SAFSFoundDev_DengjuDeng"> 
-    <title>资溪四季国际酒店</title>
+    <title>资溪四季花园国际酒店</title>
     <!-- 框架 -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- 样式清理 -->
@@ -22,8 +22,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- Favicons网站图标 -->
-    <link rel="shortcut icon" href="img/favicon.ico"/>
-    <link rel="bookmark" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="img/logo.png"/>
+    <link rel="bookmark" href="img/logo.png" type="image/x-icon"/>
   </head>
   <body>
     <!-- 移动端导航 -->
@@ -114,7 +114,7 @@
               <!-- 图片组件 -->
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="img/od.jpg" alt="1 slide">
+                  <img src="img/od.jpg" alt="资溪四季花园国际酒店""1 slide">
                 </div>
               </div>
               <!-- 进退按钮 -->
@@ -157,8 +157,8 @@
                  </div>
                </div>
                <div class="footer-right">
-                 <div class="imgbox"><img src="./img/0794-56333888.png" alt=""></div>
-                 <div class="imgbox"><img src="./img/0794-5633889.png" alt=""></div>
+                 <div class="imgbox"><img src="./img/0794-56333888.png" alt="资溪四季花园国际酒店"""></div>
+                 <div class="imgbox"><img src="./img/0794-5633889.png" alt="资溪四季花园国际酒店"""></div>
                <!-- <div class="footer-laber">
                  <ul> 
                    <li><a href="aboutus.html">关于我们</a></li>
