--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- Favicons网站图标 -->
-    <link rel="shortcut icon" href="img/favicon.ico"/>
-    <link rel="bookmark" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="img/logo.png"/>
+    <link rel="bookmark" href="img/logo.png" type="image/x-icon"/>
   </head>
   <body>
     <!-- 移动端导航 -->
@@ -93,14 +93,14 @@
             <img src="img/Shanghai.jpg" alt="资溪四季花园国际酒店">
             <div class="carousel-caption">
               <h1> 资溪一个风景如画的城市</h1>
-              <p>资溪四季花园国际酒店是目前资溪县规模大、档次高、服务项目全的龙头酒店</p>
+              <p>资溪四季花园国际酒店是目前资溪县规模大、档次高、服务项目最全的龙头酒店</p>
             </div>
           </div>
           <div class="item">
             <img src="img/Tokyo.jpg" alt="资溪四季花园国际酒店">
             <div class="carousel-caption">
               <h1> 感受尊贵  臻选四季</h1>
-              <p>自营业以来在各种接待中都体现荣誉人的热情周到、体贴入微的服务</p>
+              <p>自营业以来在各种接待中都体现我们的热情周到、体贴入微的服务</p>
             </div>
           </div>
           <div class="item">
