--- a/job.html
+++ b/job.html
@@ -23,8 +23,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- Favicons网站图标 -->
-    <link rel="shortcut icon" href="img/favicon.ico"/>
-    <link rel="bookmark" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="img/logo.png"/>
+    <link rel="bookmark" href="img/logo.png" type="image/x-icon"/>
   </head>
   <body>
     <!-- 移动端导航 -->
