--- a/product2.html
+++ b/product2.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="资溪四季国际酒店" />
-    <meta name="keywords" content="资溪四季国际酒店" />
+    <meta name="description" content="资溪四季花园国际酒店" />
+    <meta name="keywords" content="资溪四季花园国际酒店" />
     <meta name="author" content="SAFSFoundDev_DengjuDeng"> 
-    <title>资溪四季国际酒店</title>
+    <title>资溪四季花园国际酒店</title>
     <!-- 框架 -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- 样式清理 -->
@@ -22,8 +22,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- Favicons网站图标 -->
-    <link rel="shortcut icon" href="img/favicon.ico"/>
-    <link rel="bookmark" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="img/logo.png"/>
+    <link rel="bookmark" href="img/logo.png" type="image/x-icon"/>
   </head>
   <body>
     <!-- 移动端导航 -->
@@ -105,22 +105,22 @@
         <div class="box-right-mid prbox">
           <div class="primgbox">
             <a href="detail.html"></a>
-            <img src="./img/singleroom.jpg" alt="">
+            <img src="./img/singleroom.jpg" alt="资溪四季花园国际酒店""">
             <span>豪华单间</span>
           </div>
           <div class="primgbox">
             <a href="detail1.html"></a>
-            <img src="./img/tao.jpg" alt="">
+            <img src="./img/tao.jpg" alt="资溪四季花园国际酒店""">
             <span>行政套房</span>
           </div>
           <div class="primgbox">
             <a href="detail2.html"></a>
-            <img src="./img/qin.jpg" alt="">
+            <img src="./img/qin.jpg" alt="资溪四季花园国际酒店""">
             <span>亲子房</span>
           </div>
           <div class="primgbox">
             <a href="detail3.html"></a>
-            <img src="./img/shuang.jpg" alt="">
+            <img src="./img/shuang.jpg" alt="资溪四季花园国际酒店""">
             <span>双人间</span>
           </div>
         </div>
@@ -152,8 +152,8 @@
                  </div>
                </div>
                <div class="footer-right">
-                 <div class="imgbox"><img src="./img/0794-56333888.png" alt=""></div>
-                 <div class="imgbox"><img src="./img/0794-5633889.png" alt=""></div>
+                 <div class="imgbox"><img src="./img/0794-56333888.png" alt="资溪四季花园国际酒店"""></div>
+                 <div class="imgbox"><img src="./img/0794-5633889.png" alt="资溪四季花园国际酒店"""></div>
                <!-- <div class="footer-laber">
                  <ul> 
                    <li><a href="aboutus.html">关于我们</a></li>
